--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +7,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <div class="container">
-
-    <h1>Calculadora de Cajas para Dai.</h1>
-
+    <h1>Calculadora de Cajas para Dai</h1>
     <div>
       <label for="units">Cantidad de unidades:</label>
       <input type="number" id="units" min="1">
     </div>
-
     <div>
       <label for="unitsPerBox">Cantidad de unidades por caja:</label>
       <input type="number" id="unitsPerBox" min="1">
     </div>
-
     <button onclick="calculateBoxes()">Calcular</button>
-
     <div id="result"></div>
-  </div>
+  </div>  
+  <button class="reset" onclick="resetFields()">Limpiar</button>
   <script src="script.js"></script>
 </body>
 </html>
