--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Calculadora de Cajas para Dai</h1>
+    <h1>Calculadora de Cajas para Dai.</h1>
     <div>
       <label for="units">Cantidad de unidades:</label>
       <input type="number" id="units" min="1">
